# desktop-ntfy

./: Cargo.toml  README.md
src/: lib.rs  notify.rs
tests/: send_notification.rs
