[package]
name = "desktop-ntfy"
version = "0.1.0"
authors = ["chamelopi <ben.gorny@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [ "shellapi", "combaseapi", "errhandlingapi", "impl-default" ] }

[target.'cfg(not(windows))'.dependencies]
libnotify-sys = { git = "https://github.com/chamelopi/libnotify-sys" }
